[package]
name = "rust_middleware"
version = "0.1.0"
authors = ["navaneeth-webtrigon <navaneeth.webtrigon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.3.0"
rustc-serialize = "0.3"